tests/ui/derived-errors/no-spurious-unconstrained-param.stderr
error[E0425]: cannot find type `Bar` in this scope
  --> $DIR/no-spurious-unconstrained-param.rs:14:17
   |
LL | impl<T> Foo for Bar<T> {}
   |                 ^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
